@@ -36,7 +36,7 @@ import os.path
 import sys
 import datetime
 import re
-import urllib
+import urllib2
 
 import testRules
 import badTraffic
@@ -52,16 +52,18 @@ class Pytbull():
     def __init__(self, banner, target):
         print banner + "\n"
 
-        # Check if a new version is available
-        version = self.checkNewVersionAvailable()
-        if version!=0:
-            print "A new version (ver %s) is available. You can download it here:" % version
-            print "http://pytbull.googlecode.com/files/pytbull-%s.tar.bz2" % version
-            print ""
-
         # Read configuration
         self.config = ConfigParser.RawConfigParser()
         self.config.read('config.cfg')
+
+        # Check if a new version is available
+        version = self.checkNewVersionAvailable()
+        if version!=0:
+            print "NOTICE"
+            print "------------"
+            print "A new version (ver %s) is available. You can download it here:" % version
+            print "http://pytbull.googlecode.com/files/pytbull-%s.tar.bz2" % version
+            print ""
 
         # Vars initialization
         self._target    = target
@@ -122,17 +124,35 @@ class Pytbull():
         # Chek if paths are valid
         # ...to be completed...
         
-#    def testRules(self):
-#        payloads = TestRules(self._target).getPayloads()
-#        tests(payloads)
-
     def checkNewVersionAvailable(self):
-        current = open('docs/VERSION', 'r').read()
-        available = urllib.urlopen('http://pytbull.googlecode.com/svn/trunk/docs/VERSION').read()
-        if current!=available:
-            return available
-        else:
-            return 0
+        try:
+            if self.config.get('PROXY','useproxy')=='1':
+                proxy_info = {
+                'user' : self.config.get('PROXY','user'),
+                'pass' : self.config.get('PROXY','pass'),
+                'host' : self.config.get('PROXY','host'),
+                'port' : int(self.config.get('PROXY','port'))
+                }
+
+                # build a new opener that uses a proxy requiring authorization
+                proxy_support = urllib2.ProxyHandler({"http" : \
+                "http://%(user)s:%(pass)s@%(host)s:%(port)d" % proxy_info})
+                opener = urllib2.build_opener(proxy_support, urllib2.HTTPHandler)
+
+                # install it
+                urllib2.install_opener(opener)
+
+            current = open('docs/VERSION', 'r').read()
+            available = urllib2.urlopen('http://pytbull.googlecode.com/svn/trunk/docs/VERSION').read()
+
+            if current!=available:
+                return available
+            else:
+                return 0
+
+        except urllib2.HTTPError:
+            print "***ERROR: Unable to connect to googlecode. If you use a proxy, check your configuration."
+            sys.exit()
 
     def doTest(self, payloads):
         for payload in payloads:
@@ -425,17 +445,10 @@ class Pytbull():
             </pre></td>""")
         self.writeReport( """<td><h1>Pytbull Detection Report</h1>""" )
         self.writeReport( "<p>Remote Host: %s</p>" % self._target )
+        self.writeReport("<ul>")
+        for module in self.modules:
+            self.writeReport("""<li><a href="#%s">%s</a></li>""" % (module[1], module[0]))
         self.writeReport("""
-            <ul>
-            <li><a href="#client-side-attacks">Client Side Attacks</a></li>
-            <li><a href="#test-rules">Test Rules</a></li>
-            <li><a href="#bad-traffic">Bad Traffic</a></li>
-            <li><a href="#fragmented-packets">Fragmented Packets</a></li>
-            <li><a href="#multiple-failed-logins">Multiple Failed Logins</a></li>
-            <li><a href="#evasion-techniques">Evasion Techniques</a></li>
-            <li><a href="#shellcodes">ShellCodes</a></li>
-            <li><a href="#denialOfService">Denial of Service</a></li>
-            <li><a href="#pcapReplay">Pcap Replay</a></li>
             </ul>
             <div style="font-size:9pt;margin-top:150px;">(C) This report has been generated by <a href="http://code.google.com/p/pytbull/">pytbull</a>, Sebastien Damaye, aldeid.com</div>
             </td></tr></table>
