@@ -5,7 +5,9 @@ v1.1
     - Issue #3 fixed (pcapReplay module not present in the checks on STDOUT)
     - Code factoring in pytbull.py
     - Timing options are now in parameters (config.cfg)
-    - Automatically checks and informs if a new version is available
+    - Automatically checks and informs if a new version is available (use PROXY
+       section in the configuration file if needed)
+    - SVN tags added in source code
     - SVN tags added in source code
 
 v1.0
